<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>aoc</artifactId>

  <build>
    <plugins>

      <plugin>
        <artifactId>kotlin-maven-plugin</artifactId>
        <configuration>
          <jvmTarget>${maven.compiler.target}</jvmTarget>
        </configuration>
        <executions>
          <!--          <execution>-->
          <!--            <goals>-->
          <!--              <goal>compile</goal>-->
          <!--            </goals>-->
          <!--            <id>compile</id>-->
          <!--            <phase>compile</phase>-->
          <!--          </execution>-->
          <!--          <execution>-->
          <!--            <goals>-->
          <!--              <goal>test-compile</goal>-->
          <!--            </goals>-->
          <!--            <id>test-compile</id>-->
          <!--            <phase>test-compile</phase>-->
          <!--          </execution>-->
          <execution>
            <id>compile</id>
            <phase>process-sources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>

          <execution>
            <id>test-compile</id>
            <phase>process-test-sources</phase>
            <goals>
              <goal>test-compile</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.jetbrains.kotlin</groupId>
        <version>${kotlin.version}</version>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
            </goals>
            <id>compile</id>
            <phase>compile</phase>
          </execution>
          <execution>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <id>testCompile</id>
            <phase>test-compile</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>

    <resources>
      <resource>
        <directory>src/main/clojure</directory>
      </resource>
    </resources>
    <sourceDirectory>src/main/java</sourceDirectory>
  </build>

  <dependencies>
    <dependency>
      <artifactId>clojure</artifactId>
      <groupId>org.clojure</groupId>
      <version>1.11.1</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.24</version>
    </dependency>

    <dependency>
      <artifactId>commons-lang3</artifactId>
      <groupId>org.apache.commons</groupId>
      <version>3.12.0</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
      <version>5.9.0</version>
    </dependency>
    <dependency>
      <artifactId>kotlin-stdlib</artifactId>
      <groupId>org.jetbrains.kotlin</groupId>
      <version>${kotlin.version}</version>
    </dependency>
    <dependency>
      <artifactId>kotlin-test</artifactId>
      <groupId>org.jetbrains.kotlin</groupId>
      <scope>test</scope>
      <version>${kotlin.version}</version>
    </dependency>

  </dependencies>


  <groupId>net.jtth</groupId>
  <modelVersion>4.0.0</modelVersion>


  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <kotlin.version>1.8.0</kotlin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <version>1.0-SNAPSHOT</version>
</project>
